# NutritionTracker

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yaml
server/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
server/migrations/2024-10-13-153102_create_ingredients/: up.sql
server/migrations/2024-10-13-154536_create_dishes/: up.sql
server/migrations/2024-10-13-155123_create_dishes_to_ingredients/: down.sql  up.sql
server/migrations/2024-10-13-155652_create_meals/: down.sql  up.sql
server/migrations/2024-10-13-160116_create_intakes/: down.sql  up.sql
server/src/: db.rs  main.rs  schema.rs
src/: main.rs
ui/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
